<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ks2corp.trailerplug.ui.MainActivity">


    <LinearLayout
        android:id="@+id/manu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/OnTheShore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:clickable="false">

            <ImageView
                android:id="@+id/OnTheShoreI"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ontheshore" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/OnTheShore"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/TakeOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/TakeOffI"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:padding="4dp"
                app:srcCompat="@drawable/takeoff" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/TakeOff"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/OnTheRoad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/OnTheRoadI"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ontheroad" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/OnTheRoad"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/Settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/settings" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/Settings"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp"
            android:layout_weight="1" />

    </LinearLayout>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/ImgSview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:foregroundGravity="center">

        <ImageView
            android:id="@+id/ImgSignal"
            android:layout_width="62dp"
            android:layout_height="62dp"
            app:srcCompat="@drawable/grey"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:foregroundGravity="center"
            app:srcCompat="@drawable/treler"
            android:layout_marginRight="5dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="10dp"
            app:layout_constraintLeft_toLeftOf="@+id/ImgSignal"
            app:layout_constraintTop_toTopOf="@+id/ImgSignal"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />
    </android.support.constraint.ConstraintLayout>

    <include
        android:id="@+id/castomDicon"
        layout="@layout/castom_dialog_dicon"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="8dp"
        android:visibility="invisible" />

</RelativeLayout>