<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ThirdActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/ItemsBgColor"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:paddingTop="22dp"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <ImageView
            android:id="@+id/TailLights"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/taillightsoff" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:text="@string/tail_lights"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/OFFT"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp" />


            <TextView
                android:id="@+id/OFFT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dp"
                android:text="@string/off"
                android:textColor="@android:color/background_light"
                app:layout_constraintRight_toLeftOf="@+id/TailLightsOff"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.5" />

            <Switch
                android:id="@+id/TailLightsOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="9dp"
                android:textIsSelectable="false"
                android:theme="@style/MySwitch"
                android:thumb="@drawable/thumb"
                app:layout_constraintRight_toLeftOf="@+id/ONT"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/ONT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="-1dp"
                android:text="@string/on"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/ItemsColor"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingEnd="32dp"
        android:paddingStart="32dp"
        android:paddingTop="26dp"

        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <ImageView
            android:id="@+id/LeftTurnLight"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/leftturnlightoff" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/left_turn_light"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                app:layout_constraintRight_toLeftOf="@+id/OFFL"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp" />


            <TextView
                android:id="@+id/OFFL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/off"
                android:textColor="@android:color/background_light"
                app:layout_constraintRight_toLeftOf="@+id/LeftTurnLightOff"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.5" />

            <Switch
                android:id="@+id/LeftTurnLightOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textIsSelectable="false"
                android:theme="@style/MySwitch"
                android:thumb="@drawable/thumb"
                app:layout_constraintRight_toLeftOf="@+id/ONL"
                android:layout_marginRight="9dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="0dp"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/ONL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="-1dp"
                android:text="@string/on"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />
        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/ItemsBgColor"
        android:orientation="vertical"
        android:paddingBottom="12dp"
        android:paddingEnd="36dp"
        android:paddingStart="36dp"
        android:paddingTop="26dp"
        app:layout_constraintBottom_toTopOf="@+id/space"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1">

        <ImageView
            android:id="@+id/RightTurnLight"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/rightturnlightoff" />


        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/right_turn_light"
                android:textColor="@android:color/background_light"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/OFFR"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.49" />


            <TextView
                android:id="@+id/OFFR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/off"
                android:textColor="@android:color/background_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/RightTurnLightOff"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Switch
                android:id="@+id/RightTurnLightOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginRight="9dp"
                android:layout_marginTop="0dp"
                android:textIsSelectable="false"
                android:theme="@style/MySwitch"
                android:thumb="@drawable/thumb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/ONR"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <TextView
                android:id="@+id/ONR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/on"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </LinearLayout>


</LinearLayout>
